@startuml
class Application{
    - sf::RenderWindow window
    - SceneManager& sceneManager
    - void handleEvents()
    - void render()
    - void update()

    + run()
}

class SceneManager{
    - sf::RenderWindow& window
    - std::unique_ptr curScene

    + void requestSwitchScene(SceneID)
    + void switchScene();

	+ void handleEvent(const sf::Event& event);
	+ void update();
	+ void render();
}

struct SharedData{
    + int dotCount;
	+ sf::ConvexShape contour;
	+ sf::VertexArray dots;
}

class ISceneSwitcher{
    - std::optional<requestedScene>

    + SharedData shared;
	+ void requestSwitchScene(SceneID id)
}

class Scene{
    - ISceneSwitcher& sceneSwitcher
    + void handleEvent(const sf::Event& event)
	+ void update(sf::RenderWindow& window)
	+ void render(sf::RenderWindow& window)
}

class UI{
    + void handleEvent(const sf::Event& event)
	+ void update(sf::RenderWindow& window)
	+ void render(sf::RenderWindow& window)
}

class Button{
    - sf::RectangleShape shape;
	- sf::Text label;
	- sf::Font font;
	- std::function<void()> callback;
}
class Label{
	- sf::Text content;
	- sf::Vector2f coords;
	- sf::Font font;
}
class InputField{
    - std::string value;
	- sf::Text enteredText;
	- sf::Font font;
	- sf::RectangleShape shape;
	- std::function<void()> action;
}

Button --|> UI
Label --|> UI
InputField --|> UI

SharedData o-- ISceneSwitcher
SceneManager o-- Scene
SceneManager --|> ISceneSwitcher
Application o-- SceneManager

UI o-- Scene;
@enduml